# authrust

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/2023-07-24-211536_create_users/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: routes.rs
src/api/handlers/: login.rs  logout.rs  register.rs
src/db/: connection.rs  models.rs  schema.rs
src/db/repository/: user_repository.rs
src/server/: mod.rs
src/session/: mod.rs
templates/: error.html.hbs  index.html.hbs  login.html.hbs  register.html.hbs
