[package]
name = "authrust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
dotenvy = "0.15"
argon2 = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
